--- a/Waffles_Club/Waffles_Club/Views/Waffle/Details.cshtml
+++ b/Waffles_Club/Waffles_Club/Views/Waffle/Details.cshtml
@@ -1,8 +1,24 @@
-﻿<div class="card mb-3">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-body">
-        <h5 class="card-title">Название карточки</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+﻿@model WaffleDetailsViewModel
+
+<div class="container rounded-3">
+    <div class="row">
+        <div class="col-md-6">
+            <img src="@Model.Waffle.ImageUrl" class="img-fluid rounded-3">
+        </div>
+        <div class="col-md-6 rounded-3">
+            <h1 class="mt-3">@Model.Waffle.Name</h1>
+            <p class="lead">@Model.Waffle.Description</p>
+            <ul class="list-unstyled">
+                <li>Тип: @Model.WaffleType.Name</li>
+                <li>Начинка: @Model.FillingType.Name</li>
+                <li>Количество в упаковке: @Model.Waffle.CountInPackage</li>
+                <li>Цена: @Model.Waffle.Price $</li>
+                <li>Вес: @Model.Waffle.Weight г.</li>
+            </ul>
+            <a asp-controller="Waffle" asp-action="Index" class="btn btn-primary">Назад</a>
+            <a asp-controller="Cart" asp-action="AddWaffleToCart" asp-route-waffleId="@Model.Waffle.Id" class="btn btn-primary m-1">
+                <i class="fas fa-shopping-cart"></i> Добавить в корзину
+            </a>
+        </div>
     </div>
 </div>
