--- a/Waffles_Club/Waffles_Club/Views/Waffle/Index.cshtml
+++ b/Waffles_Club/Waffles_Club/Views/Waffle/Index.cshtml
@@ -217,10 +217,10 @@
                         <div class="card h-100 text-center d-flex flex-column">
                             <div class="card-body">
                                 <img class="card-img-top h-70 img-fluid" src="@item.ImageUrl" alt="Card image cap">
-                                <h5 class="card-title">@item.Name</h5>
+                                <a asp-controller="Waffle" asp-action="Details" asp-route-waffleId="@item.Id" class="custom-link"><h5 class="card-title">@item.Name</h5></a>
                             </div>
                             <div class="card-footer mt-auto">
-                                <a class="btn btn-primary m-1">
+                                <a asp-controller="Cart" asp-action="AddWaffleToCart" asp-route-waffleId="@item.Id" class="btn btn-primary m-1">
                                     <i class="fas fa-shopping-cart"></i> Добавить в корзину
                                 </a>
                                 <p class="card-text">@item.Price $</p>
@@ -292,4 +292,14 @@
         background-color: gray;
         border-color: gray;
     }
+
+    .custom-link {
+        color: black;
+        text-decoration: none;
+        transition: color 0.3s;
+    }
+
+        .custom-link:hover {
+            color: #007bff;
+        }
 </style>
