Updated controllers, added personal page

--- a/Waffles_Club/Waffles_Club/Views/Shared/_UserInfoPartial.cshtml
+++ b/Waffles_Club/Waffles_Club/Views/Shared/_UserInfoPartial.cshtml
@@ -19,7 +19,7 @@
             </li>
             <li><hr class="dropdown-divider"></li>
             <li>
-                <a class="nav-link btn btn-link text-dark" href="#" @* asp-controller="Waffle" asp-action="Index" *@>
+                <a class="nav-link btn btn-link text-dark" asp-controller="Account" asp-action="GetAccountPage" >
                     Личный кабинет
                 </a>
             </li>
