--- a/Waffles_Club/Waffles_Club/Views/Shared/_UserInfoPartial.cshtml
+++ b/Waffles_Club/Waffles_Club/Views/Shared/_UserInfoPartial.cshtml
@@ -29,6 +29,15 @@
                     История заказов
                 </a>
             </li>
+            @if (User.FindFirst("IsAdmin").Value == "True")
+            {
+                <li><hr class="dropdown-divider"></li>
+                <li>
+                    <a class="nav-link btn btn-link text-dark" @* asp-controller="Account" asp-action="Logout" *@>
+                        Админ панель
+                    </a>
+                </li>
+            }
             <li><hr class="dropdown-divider"></li>
             <li>
                 <a class="nav-link btn btn-link text-dark" asp-controller="Account" asp-action="Logout">
