Added cart view and updated controller, services

--- a/Waffles_Club/Waffles_Club/Views/Account/GetAccountPage.cshtml
+++ b/Waffles_Club/Waffles_Club/Views/Account/GetAccountPage.cshtml
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Личный кабинет</h1>
-        <img src="images/avatar.png" width="50" alt="User" class="rounded" />
+        <img src="/images/avatar.png" width="50" alt="User" class="rounded" />
         <div class="auth-buttons">
             <h2>Имя : @Model.Name</h2><br>
             <h2>Email : @Model.Email</h2>
