--- a/Waffles_Club/Waffles_Club/Views/Shared/Components/Cart/CartView.cshtml
+++ b/Waffles_Club/Waffles_Club/Views/Shared/Components/Cart/CartView.cshtml
@@ -1,5 +1,5 @@
 ﻿@model int
 
-<a class="nav-link btn btn-link text-dark" href="#" @* asp-controller="Cart" asp-action="Index" *@>
+<a class="nav-link btn btn-link text-dark"asp-controller ="Cart" asp-action="GetCartByUserId">
 	 Корзина <i class="fa-solid fa-cart-shopping"></i> (@Model)
 </a>
