--- a/Waffles_Club/Waffles_Club/Views/Shared/_UserInfoPartial.cshtml
+++ b/Waffles_Club/Waffles_Club/Views/Shared/_UserInfoPartial.cshtml
@@ -25,7 +25,7 @@
             </li>
             <li><hr class="dropdown-divider"></li>
             <li>
-                <a class="nav-link btn btn-link text-dark" href="#" @* asp-controller="Waffle" asp-action="Index" *@>
+                <a class="nav-link btn btn-link text-dark"asp-controller ="Order" asp-action="GetOrdersByUserId">
                     История заказов
                 </a>
             </li>
