--- a/Waffles_Club/Waffles_Club/Views/Waffle/Details.cshtml
+++ b/Waffles_Club/Waffles_Club/Views/Waffle/Details.cshtml
@@ -1,5 +1,8 @@
 ﻿@model WaffleDetailsViewModel
 
+@{
+    Layout = "_Layout";
+}
 <div class="container rounded-3">
     <div class="row">
         <div class="col-md-6">
