Fix icon and favicon

--- a/Waffles_Club/Waffles_Club/Views/Cart/GetCartByUserId.cshtml
+++ b/Waffles_Club/Waffles_Club/Views/Cart/GetCartByUserId.cshtml
@@ -56,7 +56,7 @@
     </table>
 
 <div class="center-container">
-    <p class="order-cost"><br>Стоимость устройств : @orderCost<br/></p>
+    <p class="order-cost"><br>Стоимость: @orderCost<br/></p>
         <a class="bigger-button" href="@Url.Action("CreateOrder", "Order", new { orderViewModels=orderViewModels})">Заказать</a>
 </div>
     <div class="navigation-button">
