--- a/Waffles_Club/Waffles_Club/Views/Shared/_Layout.cshtml
+++ b/Waffles_Club/Waffles_Club/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Waffles_Club</title>
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="~/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <div class="d-flex align-items-center">
-                    <img src="images/waffle.png" width="60" alt="Waffle" class="rounded" />
+                    <img src="~/images/waffle.png" width="60" alt="Waffle" class="rounded" />
                     <a class="navbar-brand" asp-area="" asp-controller="Waffle" asp-action="Index">Waffles Club</a>
                 </div>
 
