Edit users added

--- a/Waffles_Club/Waffles_Club/Areas/Admin/Views/User/Edit.cshtml
+++ b/Waffles_Club/Waffles_Club/Areas/Admin/Views/User/Edit.cshtml
@@ -1,5 +1,48 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@model Waffles_Club.Data.Entity.User
+
+<div class="modal fade" id="validationErrorsModal" tabindex="-1" aria-labelledby="validationErrorsModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="validationErrorsModalLabel">Ошибки валидации</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>@Html.ValidationSummary(false, "", new { @class = "text-danger" })</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<form asp-area="Admin" asp-controller="User" asp-action="Update" method="post">
+    <div class="form-group">
+        <label for="inputLogin2"><i class="fa fa-user"></i>&nbsp;Login</label>
+        <input name="Login" type="text" class="form-control" value="@Model.Login" id="inputLogin2">
+    </div>
+    <div class="form-group">
+        <label for="inputName"><i class="fa fa-calendar"></i>&nbsp;Name</label>
+        <input name="Name" type="text" value="@Model.Name"  class="form-control" id="inputName">
+    </div>
+    <div class="form-group">
+        <label for="inputEmail"><i class="fa fa-lock"></i>&nbsp;Email</label>
+        <input name="Email" type="email" value="@Model.Email" class="form-control" id="inputEmail">
+    </div>
+
+    <button type="submit" class="btn btn-secondary w-100">
+        Применить
+    </button>
+</form>
+
+@section scripts {
+    <script>
+        $(document).ready(function () {
+        @if (!ViewData.ModelState.IsValid)
+        {
+            <text>$('#validationErrorsModal').modal('show'); </text>
+        }
+        });
+    </script>
 }
