--- a/Waffles_Club/Waffles_Club/Areas/Admin/Views/Waffle/Waffles.cshtml
+++ b/Waffles_Club/Waffles_Club/Areas/Admin/Views/Waffle/Waffles.cshtml
@@ -29,7 +29,7 @@
                 <tr>
                     <td><img src="@waffleDetails.Waffle.ImageUrl" alt="@waffleDetails.Waffle.Name" width="50" height="50"></td>
                     <td>@waffleDetails.Waffle.Name</td>
-                    <td>@waffleDetails.Waffle.Price руб</td>
+                    <td>@waffleDetails.Waffle.Price $</td>
                     <td>@waffleDetails.Waffle.Description</td>
                     <td>@waffleDetails.WaffleType.Name</td>
                     <td>@waffleDetails.FillingType.Name</td> <!-- Добавлено отображение типа наполнения -->
@@ -39,7 +39,7 @@
         </tbody>
     </table>
     <div>
-        <a class="edit-button" href="@Url.Action("Create", "Device",new {area="Admin"})">Добавить вафлю</a> <!-- Изменено на "Добавить вафлю" -->
+        <a class="edit-button" href="/Admin/Waffle/Create">Добавить вафлю</a> <!-- Изменено на "Добавить вафлю" -->
     </div>
 </body>
 </html>
