--- a/Waffles_Club/Waffles_Club/Views/Shared/_AdminLayout.cshtml
+++ b/Waffles_Club/Waffles_Club/Views/Shared/_AdminLayout.cshtml
@@ -9,7 +9,7 @@
     <h1>Страница Администратора</h1>
     <div class="auth-buttons">
         <a class="btn btn-auth" href="@Url.Action("GetOrders", "Order", new {area="Admin"})">Обрабатывать заказы</a>
-            <a class="btn btn-auth" href="@Url.Action("GetAllWaffles", "Waffle", new {area="Admin"})">Просмотреть вафли</a>
+            <a class="btn btn-auth "/Admin/Waffle/GetAllWaffles">Просмотреть вафли</a>
             <a class="btn btn-auth" href="@Url.Action("GetDevices", "Device", new {area="Admin"})">Просмотреть категории</a>
             <a class="btn btn-auth" href="@Url.Action("GetAllUsers", "User", new {area="Admin"})">Просмотреть пользователей</a>
         <a class="btn btn-auth" href="@Url.Action("Index", "Waffle")">Выйти</a>
