--- a/Waffles_Club/Waffles_Club/Views/Shared/_AdminLayout.cshtml
+++ b/Waffles_Club/Waffles_Club/Views/Shared/_AdminLayout.cshtml
@@ -2,19 +2,26 @@
 <html>
 <head>
     <title>Страница Администратора</title>
-    <link rel="stylesheet" href="~/css/personalArea.css"> <!-- Путь к файлу стилей -->
+    @await RenderSectionAsync("Style", required: false)
+    <link rel="stylesheet" href="~/css/personalArea.css">
 </head>
 <body>
-<header>
-    <h1>Страница Администратора</h1>
-    <div class="auth-buttons">
-        <a class="btn btn-auth" href="@Url.Action("GetOrders", "Order", new {area="Admin"})">Обрабатывать заказы</a>
-            <a class="btn btn-auth "/Admin/Waffle/GetAllWaffles">Просмотреть вафли</a>
+    <header>
+        <h1>Страница Администратора</h1>
+        <div class="auth-buttons">
+            <a class="btn btn-auth" href="@Url.Action("GetOrders", "Order", new {area="Admin"})">Обрабатывать заказы</a>
+            <a class="btn btn-auth " /Admin/Waffle/GetAllWaffles">Просмотреть вафли</a>
             <a class="btn btn-auth" href="@Url.Action("GetDevices", "Device", new {area="Admin"})">Просмотреть категории</a>
             <a class="btn btn-auth" href="@Url.Action("GetAllUsers", "User", new {area="Admin"})">Просмотреть пользователей</a>
-        <a class="btn btn-auth" href="@Url.Action("Index", "Waffle")">Выйти</a>
-    </div>
-</header>
-@RenderBody()
+            <a class="btn btn-auth" href="@Url.Action("Index", "Waffle")">Выйти</a>
+        </div>
+    </header>
+
+    @RenderBody()
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/font-awesome/js/all.min.js"></script>
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
