--- a/Waffles_Club/Waffles_Club/Views/Shared/_UserInfoPartial.cshtml
+++ b/Waffles_Club/Waffles_Club/Views/Shared/_UserInfoPartial.cshtml
@@ -33,7 +33,7 @@
             {
                 <li><hr class="dropdown-divider"></li>
                 <li>
-                    <a class="nav-link btn btn-link text-dark" @* asp-controller="Account" asp-action="Logout" *@>
+                    <a class="nav-link btn btn-link text-dark" href="/Admin">
                         Админ панель
                     </a>
                 </li>
