Updated views and controllers

--- a/Waffles_Club/Waffles_Club/Areas/Admin/Views/User/Edit.cshtml
+++ b/Waffles_Club/Waffles_Club/Areas/Admin/Views/User/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model Waffles_Club.Data.Entity.User
+﻿@using Waffles_Club.Data.Entity;
+@model Waffles_Club.Data.Entity.User
 
 @{
     Layout = "_AdminLayout";
