--- a/Waffles_Club/Waffles_Club/Views/Shared/_AdminLayout.cshtml
+++ b/Waffles_Club/Waffles_Club/Views/Shared/_AdminLayout.cshtml
@@ -9,9 +9,9 @@
     <header>
         <h1>Страница Администратора</h1>
         <div class="auth-buttons">
-            <a class="btn btn-auth" href="@Url.Action("GetOrders", "Order", new {area="Admin"})">Обрабатывать заказы</a>
+            <a class="btn btn-auth" href="/Admin/Order/GetAllOrders">Обрабатывать заказы</a>
             <a class="btn btn-auth"  href="/Admin/Waffle/GetAllWaffles">Просмотреть вафли</a>
-            <a class="btn btn-auth" href="/Admin/Waffle/GetAllWaffles">Просмотреть категории</a>
+            <a class="btn btn-auth" href="/Admin/WaffleType/Index">Просмотреть категории</a>
             <a class="btn btn-auth" href="/Admin/User/GetAllUsers">Просмотреть пользователей</a>
             <a class="btn btn-auth" href="@Url.Action("Index", "Waffle")">Выйти</a>
         </div>
